--- a/projects.html
+++ b/projects.html
@@ -24,6 +24,15 @@
         <li>
             <div class="container container-center">
                 <h1>
+                    minions speakkk !
+                </h1>
+                <small>December,2020</small>
+                <p>Do you like <strong>MINIONS?</strong> Do you want to talk like minions?Use this translator app to convert your english language into minion language </p>
+                <a class="link link-primary" href="https://minionsspeak.netlify.app/">Live Project</a>
+                <a class="link link-secondary" href="https://github.com/Himanshu916/minions">View Source</a>
+            </div>
+            <div class="container container-center">
+                <h1>
                     are u a messi fan?
                 </h1>
                 <small>November,2020</small>
