feat - another-funtranslation-app added
this is to add learn british accent

--- a/projects.html
+++ b/projects.html
@@ -24,6 +24,15 @@
         <li>
             <div class="container container-center">
                 <h1>
+                    Learn British Accent
+                </h1>
+                <small>December,2020</small>
+                <p>hello people ! Do you want to see that how you can say things in british accent ? then checkout this app !</p>
+                <a class="link link-primary" href="https://britishaccent.netlify.app/">Live Project</a>
+                <a class="link link-secondary" href="https://github.com/Himanshu916/british-accent">View Source</a>
+            </div>
+            <div class="container container-center">
+                <h1>
                     minions speakkk !
                 </h1>
                 <small>December,2020</small>
