feat- travel-app added

--- a/projects.html
+++ b/projects.html
@@ -24,6 +24,15 @@
         <li>
             <div class="container container-center">
                 <h1>
+                   Want to Travel?
+                </h1>
+                <small>December,2020</small>
+                <p>Hey Everyone this app will tell you my ratings for the places of different categories like adventure,honeymoon or nightlife experience!</p>
+                <a class="link link-primary" href="https://4hcuk.csb.app/">Live Project</a>
+                <a class="link link-secondary" href="https://github.com/Himanshu916/india-travel-ratings">View Source</a>
+            </div>
+            <div class="container container-center">
+                <h1>
                     Know the meaning of Emoji ?
                 </h1>
                 <small>December,2020</small>
