--- a/projects.html
+++ b/projects.html
@@ -87,5 +87,17 @@
         </li>
 
     </ul>
+    <footer class="footer">
+        <div class="footer-header">
+            social media presence
+        </div>
+        <ul class="social-links list-non-bullet">
+            <li class="list-item-inline" > <a class="link" href="https://github.com/Himanshu916">github</a> </li>
+            <li class="list-item-inline"> <a class="link" href="https://twitter.com/himanshu__Rana">twitter</a> </li>
+            <li class="list-item-inline"> <a class="link" href="https://www.linkedin.com/in/himanshu-rana-843383187/">linkedin</a> </li>
+            
+
+        </ul>
+    </footer>
 </body>
 </html>
