--- a/projects.html
+++ b/projects.html
@@ -37,7 +37,7 @@
                 </h1>
                 <small>December,2020</small>
                 <p>This app is helpful for knowing the meaning of emojis.Do you want to know meaning of the emojis?if yes,then checkout this app !</p>
-                <a class="link link-primary" href="https://rdqqs.csb.app/">Live Project</a>
+                <a class="link link-primary" href="https://hwtwc.csb.app/">Live Project</a>
                 <a class="link link-secondary" href="https://github.com/Himanshu916/emoji-meaning">View Source</a>
             </div>
             <div class="container container-center">
