feat:blog added for an api

--- a/blog2.html
+++ b/blog2.html
@@ -6,8 +6,18 @@
     <title>Blog 2</title>
 </head>
 <body>
-    <h1>This is dummy.</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, doloremque? Vero asperiores quos architecto iusto reiciendis quisquam, consectetur sunt cumque error nulla voluptates voluptatem rem, labore dolores fuga magni iure. Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus at error fuga eligendi earum hic nesciunt pariatur quae quos repellat laudantium, facere rem reprehenderit asperiores odio. Voluptatem aut earum porro.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime perferendis hic, nostrum sint quas dolore, consequuntur ipsum vero eos accusantium porro, odit quisquam aut asperiores rerum sed optio perspiciatis praesentium!</p>
+    <h1>What is an API?</h1>
+    <h2>Api is an acronym for application programming interface. To understand that what is an api ,we first need to understand “what is an interface ? ”</h2>
+    <hr>
+    <h3>Interface</h3>
+    <p>An interface is a shared boundary across which two or more component of a system(computer system ) exchange information.Now the exchange can be between softwares, hardwares, humans, peripheral devices and combinations of these.</p>
+    <hr>
+    <h3>API(Application Programming Interface)</h3>
+    <p>Api  is an interface between the softwares where the information is exchanged(via programming) between two or more applications .So, it is the medium(or can be think of as a messenger) through which any two applications talk to each other.</p>
+    <p>One application will request for some information to the other application by sending some data .In response to that request the other application will provide the information to the application that requested it. And then the app will show that information in the readable format to the user. So, the medium(programming) through which the information is exchanged between these two applications is called an API(application programming interface) .</p>
+    <h3>Real life examlple to understand "what is an api?"</h3>
+    <p>Consider an example from the real life. Suppose that you go to the restaurant .<strong>There is you(user), table(the application through which you send the information),  waiter( Api )  and kitchen(the other  application from which the information will  be fetched).</strong></p>
+    <p>Now you call the waiter (i.e an api) and order him to bring masala dosa(provide the data to have some information i.e the menu in which masala dosa is selected) .The waiter carries the order(data)  and give it to the kitchen(the other application retrieves the data).Then the kitchen provide the masala dosa ( provide the corresponding information)to the waiter(api) and waiter will carry that masala dosa back to the table(application that requests the information) and the user(end user) will consume that masala dosa(that fetched information).</p>
+
 </body>
-</html>
+</html> 
