--- a/blogs.html
+++ b/blogs.html
@@ -35,10 +35,10 @@
             </div>
             <div class="container container-center">
                 <h1>
-                    Dummy blog
+                    Api(Application Programming Interface)
                 </h1>
-                <small>November,2020</small>
-                <p>This is a dummy blog , i will write more blogs very soon.</p>
+                <small>December,2020</small>
+                <p>I was not able to understand that what is an api  .Now I know what is an api and so I try to explain it in a very simple language .Give it a read , hopefully you will not have any confusion about the answer for the question “what is an api?”</p>
                 <a class="link link-secondary" href="/blog2.html">Read Blog</a>
 
             </div>
