--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <section class="section ow">
         <div class="container container-center">
             <h1>Blogs</h1>
-            <p>I am writing on some technical blogs.Whatever i learn , i tries to write blog on that.</p>
+            <p>I am writing technical blogs.Whatever i learn , i try to write blog on that.</p>
             <a class="link link-secondary" href="/blogs.html">See Blogs</a>
         </div>
         
